--- a/data/streaming_asa/onperm/main.env
+++ b/data/streaming_asa/onperm/main.env
@@ -1,3 +1,3 @@
-RIDE_EVENT_HUB=<RIDE_EVENT_HUB_CONNECTIONSTRING>
-FARE_EVENT_HUB=<FARE_EVENT_HUB_CONNECTIONSTRING>
-RIDE_DATA_FILE_PATH=<PATH OF FILE WITH DATA MOUNTED IN DOCKER>
+RIDE_EVENT_HUB="Endpoint=sb://pnpasarg.servicebus.windows.net/;SharedAccessKeyName=custom;SharedAccessKey=eQkKpdqu2PkHy8kGoFSOppbomucsacWJNvAwBzgcfI4=;EntityPath=taxiride"
+FARE_EVENT_HUB="Endpoint=sb://pnpasarg.servicebus.windows.net/;SharedAccessKeyName=custom;SharedAccessKey=1CBjSvMRnAjcLUGELWPI4pqNFzi+Ybu6g9jA0Y0mOUI=;EntityPath=taxifare"
+RIDE_DATA_FILE_PATH="./DataFile"
